k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: todomvc-service
spec:
  selector:
    app: todomvc
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 80
